tests/parser/assign-statement-not-terminated.stderr
error: expected ';'
 --> $DIR/assign-statement-not-terminated.lox:1:7
  |
1 | x = 5 _
  |       ^
